docs/apache-airflow-providers-google/8.0.0/_sources/_api/airflow/providers/google/cloud/links/bigquery_dts/index.rst.txt
:py:mod:`airflow.providers.google.cloud.links.bigquery_dts`
===========================================================

.. py:module:: airflow.providers.google.cloud.links.bigquery_dts

.. autoapi-nested-parse::

   This module contains Google BigQuery Data Transfer links.



Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.google.cloud.links.bigquery_dts.BigQueryDataTransferConfigLink




Attributes
~~~~~~~~~~

.. autoapisummary::

   airflow.providers.google.cloud.links.bigquery_dts.BIGQUERY_BASE_LINK
   airflow.providers.google.cloud.links.bigquery_dts.BIGQUERY_DTS_LINK


.. py:data:: BIGQUERY_BASE_LINK
   :annotation: = https://console.cloud.google.com/bigquery/transfers

   

.. py:data:: BIGQUERY_DTS_LINK
   

   

.. py:class:: BigQueryDataTransferConfigLink

   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`

   Helper class for constructing BigQuery Data Transfer Config Link

   .. py:attribute:: name
      :annotation: = BigQuery Data Transfer Config

      

   .. py:attribute:: key
      :annotation: = bigquery_dts_config

      

   .. py:attribute:: format_str
      

      

   .. py:method:: persist(context, task_instance, region, config_id, project_id)
      :staticmethod:



