docs/apache-airflow-providers-google/14.1.0/_sources/_api/airflow/providers/google/cloud/links/bigquery_dts/index.rst.txt
airflow.providers.google.cloud.links.bigquery_dts
=================================================

.. py:module:: airflow.providers.google.cloud.links.bigquery_dts

.. autoapi-nested-parse::

   This module contains Google BigQuery Data Transfer links.



Attributes
----------

.. autoapisummary::

   airflow.providers.google.cloud.links.bigquery_dts.BIGQUERY_BASE_LINK
   airflow.providers.google.cloud.links.bigquery_dts.BIGQUERY_DTS_LINK


Classes
-------

.. autoapisummary::

   airflow.providers.google.cloud.links.bigquery_dts.BigQueryDataTransferConfigLink


Module Contents
---------------

.. py:data:: BIGQUERY_BASE_LINK
   :value: '/bigquery/transfers'


.. py:data:: BIGQUERY_DTS_LINK
   :value: '/bigquery/transfers/locations/{region}/configs/{config_id}/runs?project={project_id}'


.. py:class:: BigQueryDataTransferConfigLink

   Bases: :py:obj:`airflow.providers.google.cloud.links.base.BaseGoogleLink`


   Helper class for constructing BigQuery Data Transfer Config Link.


   .. py:attribute:: name
      :value: 'BigQuery Data Transfer Config'


      Name of the link. This will be the button name on the task UI.



   .. py:attribute:: key
      :value: 'bigquery_dts_config'



   .. py:attribute:: format_str
      :value: '/bigquery/transfers/locations/{region}/configs/{config_id}/runs?project={project_id}'



   .. py:method:: persist(context, task_instance, region, config_id, project_id)
      :staticmethod:



